# mlforge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  constraints.txt  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/commands/: code-design-analyser.md  code-red-flags-analyser.md  commit.md  documentation.md  generate-docs.md  update-tests.md  updates-docs.md
.claude/research/: research_feature_store_2025-11-16.md
.cursor/commands/: commit-push-pr.md  create-new-feature.md  docs.md  plan-feature.md  research.md  tests.md
.docker/: .env.example  Dockerfile.dagster  Dockerfile.mlflow  README.md  dagster.yaml  docker-compose.yaml  workspace.yaml
.github/actions/setup/: action.yaml
.github/workflows/: bump.yaml  check.yaml  publish.yaml
.opencode/agent/: code-analyzer.md  code-reviewer.md  file-analyzer.md  parallel-worker.md  test-runner.md
.opencode/command/: commit-push-pr.md  create-new-feature.md  docs.md  documentation.md  generate-docs.md  generate-tests.md  plan-feature.md  tests.md  update-readme.md  updates-docs.md
api/core/: index.html
api/manifest/: index.html
api/online/: index.html
api/retrieval/: index.html
api/store/: index.html
api/types/: index.html
api/utils/: index.html
api/validation/: index.html
api/validators/: index.html
api/version/: index.html
cli/: index.html
docs/: ROADMAP.md  architecture.md  checklist-standards.md  cli.md  index.md
docs/api/: core.md  manifest.md  online.md  profiles.md  retrieval.md  store.md  types.md  utils.md  validation.md  validators.md  version.md
docs/comparison/: feast.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: building-features.md  defining-features.md  entity-keys.md  feature-metadata.md  online-stores.md  point-in-time.md  retrieving-features.md  source-abstraction.md  storage-backends.md  timestamp-handling.md  validators.md
examples/databricks/: README.md  mlforge.yaml  pyproject.toml
examples/databricks-sql/: .env.example  README.md  build_features.py  definitions.py  features.py  mlforge.yaml  run_build.py  verify_databricks.py  verify_databricks_connect.py  verify_databricks_write.py
examples/databricks/src/databricks_features/: __init__.py  definitions.py  entities.py  features.py  generate_data.py  main.py  serve.py  train.py
examples/fraud-detection/: README.md  docker-compose.yml  mlforge.yaml  pyproject.toml
examples/recommendation/: README.md  docker-compose.yml  mlforge.yaml  pyproject.toml
examples/recommendation/src/recommendation/: __init__.py  definitions.py  entities.py  generate_data.py  item_features.py  serve.py  user_features.py
examples/transactions/: mlforge.yaml  pyproject.toml
examples/transactions-online/: .gitignore  README.md  data  docker-compose.yml  mlforge.yaml  pyproject.toml
examples/transactions-online/src/transactions_online/: __init__.py  definitions.py  features.py  read_features.py
examples/transactions-pyspark/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
examples/transactions-pyspark/src/transactions_pyspark/: __init__.py  definitions.py  features.py
examples/transactions/feature_store/_metadata/: account_spend_7d_interval.meta.json  merchant_spend_1d_interval.meta.json  user_spend_30d_interval.meta.json
examples/transactions/feature_store/account_spend_7d_interval/1.0.0/: .meta.json
examples/transactions/feature_store/account_spend_7d_interval/1.0.1/: .meta.json
examples/transactions/feature_store/merchant_spend_1d_interval/1.0.0/: .meta.json
examples/transactions/feature_store/merchant_spend_1d_interval/1.0.1/: .meta.json
examples/transactions/feature_store/merchant_spend_1d_interval/1.0.2/: .meta.json
examples/transactions/feature_store/user_spend_30d_interval/: .gitignore
examples/transactions/feature_store/user_spend_30d_interval/1.0.0/: .meta.json
examples/transactions/feature_store/user_spend_30d_interval/1.0.1/: .meta.json
examples/transactions/src/transactions/: definitions.py  features.py  main.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
roadmap/: .gitignore  FEATURE_TEMPLATE.md  ROADMAP.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.5.0.md  v0.6.0.md  v0.8.0.md  v1.0.0.md
roadmap/v0.5.0/: duckdb-engine.md  online-retrieval.md  redis-online.md  unified-types.md  versioning.md
search/: search_index.json
src/mlforge/: __init__.py  aggregates.py  cli.py  compilers.py  core.py  discovery.py  durations.py  engines.py  errors.py  incremental.py  loader.py  logging.py  manifest.py  metrics.py  online.py  profiles.py  results.py  retrieval.py  store.py  types.py  utils.py  validation.py  version.py
src/mlforge/compilers/: __init__.py  duckdb.py  polars.py  pyspark.py
src/mlforge/engines/: __init__.py  databricks_sql.py  duckdb.py  polars.py  pyspark.py
src/mlforge/integrations/: mlflow.py
tasks/: check.just  clean.just  commit.just  docker.just  docs.just  format.just  package.just
tests/: conftest.py  test_aggregates.py  test_cli.py  test_core.py  test_databricks_engine.py  test_databricks_online_store.py  test_databricks_unity_catalog_store.py  test_duckdb.py  test_durations.py  test_dynamodb_store.py  test_engine_parity.py  test_entities.py  test_errors.py  test_incremental.py  test_loader.py  test_manifest.py  test_mlflow.py  test_online.py  test_profiles.py  test_pyspark.py  test_retrieval.py  test_serve.py  test_sources.py  test_store.py  test_timestamps.py  test_types.py  test_unity_catalog_store.py  test_utils.py  test_validation.py  test_validators.py  test_versioning.py
user-guide/building-features/: index.html
user-guide/defining-features/: index.html
user-guide/entity-keys/: index.html
user-guide/feature-metadata/: index.html
user-guide/online-stores/: index.html
user-guide/point-in-time/: index.html
user-guide/retrieving-features/: index.html
user-guide/storage-backends/: index.html
user-guide/validators/: index.html
(+17 files in other folders)
