[project]
name = "mlforge"
version = "0.1.0"
description = "ML Platform for your local machine using cheap cloud services for scalable resources."
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "cyclopts>=4.2.1",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "loguru>=0.7.3",
]

[project.scripts]
mlforge = "mlforge.cli:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "rust-just>=1.43.0",
]
commit = [
    "commitizen>=4.9.1",
    "prek>=0.2.13",
]
check = [
    "bandit>=1.9.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[tool.uv]
default-groups = ["check", "commit", "dev"]

[tool.uv.workspace]
members = [
    "examples/transactions",
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
