[project]
name = "mlforge-sdk"
version = "0.3.0"
description = "ML Platform for your local machine using cheap cloud services for scalable resources."
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "cyclopts>=4.2.1",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "loguru>=0.7.3",
    "hatchling>=1.28.0",
    "setuptools>=80.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
keywords = ["feature-store", "mlops", "machine-learning", "polars"]

[project.urls]
Homepage = "https://github.com/chonalchendo/mlforge"
Documentation = "https://chonalchendo.github.io/mlforge"
Repository = "https://github.com/chonalchendo/mlforge"


[project.scripts]
mlforge = "mlforge.cli:app"

# BUILD SYSTEM

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# DEPENDENCY GROUPS

[dependency-groups]
dev = [
    "rust-just>=1.43.0",
]
commit = [
    "commitizen>=4.9.1",
    "cz-conventional-gitmoji>=0.7.0",
    "prek>=0.2.13",
]
check = [
    "bandit>=1.9.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]

# TOOLS

[tool.hatch.build.targets.wheel]
packages = ["src/mlforge"]

[tool.uv]
default-groups = ["check", "commit", "dev"]

[tool.uv.workspace]
members = [
    "examples/transactions",
]


[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
