[project]
name = "mlforge-sdk"
version = "0.7.0"
description = "ML Platform for your local machine using cheap cloud services for scalable resources."
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "cyclopts>=4.2.1",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "loguru>=0.7.3",
    "hatchling>=1.28.0",
    "setuptools>=80.9.0",
    "s3fs>=2025.12.0",
    "omegaconf>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "prometheus-client>=0.21.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
keywords = ["feature-store", "mlops", "machine-learning", "polars"]

[project.optional-dependencies]
duckdb = ["duckdb>=1.4.3"]
redis = ["redis>=7.1.0"]
dynamodb = ["boto3>=1.28.0"]
mlflow = ["mlflow>=2.0.0"]
pyspark = ["pyspark>=3.5.0"]
databricks = [
    "pyspark>=3.5.0",
    "databricks-sdk>=0.20.0",
    "delta-spark>=3.0.0",
]
all = ["duckdb>=1.4.3", "redis>=7.1.0", "gcsfs>=2025.12.0", "mlflow>=2.0.0", "pyspark>=3.5.0"]
gcs = [
    "gcsfs>=2025.12.0",
]

[project.urls]
Homepage = "https://github.com/chonalchendo/mlforge"
Documentation = "https://chonalchendo.github.io/mlforge"
Repository = "https://github.com/chonalchendo/mlforge"


[project.scripts]
mlforge = "mlforge.cli:main"

# BUILD SYSTEM

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# DEPENDENCY GROUPS

[dependency-groups]
dev = [
    "rust-just>=1.43.0",
]
commit = [
    "commitizen>=4.9.1",
    "cz-conventional-gitmoji>=0.7.0",
    "prek>=0.2.13",
]
check = [
    "bandit>=1.9.2",
    "boto3>=1.28.0",
    "duckdb>=1.4.3",
    "httpx>=0.28.0",
    "mlflow>=2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "redis>=7.1.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]

# TOOLS

[tool.hatch.build.targets.wheel]
packages = ["src/mlforge"]

[tool.uv]
default-groups = ["check", "commit", "dev"]

[tool.uv.workspace]
members = [
    "examples/transactions",
    "examples/transactions-online",
    "examples/transactions-pyspark",
    "examples/fraud-detection",
    "examples/recommendation",
]

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = false
major_version_zero = true
bump_map = { "feat" = "MINOR", "fix" = "PATCH", "refactor" = "PATCH", "perf" = "PATCH" }
bump_pattern = "^(feat|fix|refactor|perf)(\\(.+\\))?(!)?:"

# Ignore unresolved-import for files using PySpark (optional dependency)
[[tool.ty.overrides]]
include = [
    "**/pyspark.py",
    "**/test_pyspark.py",
    "**/types.py",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ruff]
fix = true
indent-width = 4
line-length = 80
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
