[project]
name = "transactions-online"
version = "0.1.0"
description = "Example demonstrating mlforge online store with Redis"
requires-python = ">=3.13.0"
dependencies = [
    "mlforge-sdk[redis]",
]

[tool.uv.sources]
mlforge-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transactions_online"]
